--- a/DozeAnywhere/DozeAnywhere.csproj
+++ b/DozeAnywhere/DozeAnywhere.csproj
@@ -18,7 +18,7 @@
 		<Reference Include="Dalamud">
 			<Private>False</Private>
 		</Reference>
-		<Reference Include="ImGui.NET">
+		<Reference Include="Dalamud.Bindings.ImGui">
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="Lumina">
